footer text contrast fix

--- a/src/css/gawm.css
+++ b/src/css/gawm.css
@@ -232,4 +232,10 @@ button:hover
   text-align: center;
   font-size: 12px;
   font-family: 'Nunito', sans-serif;
+  color: white;
 }
+.footer a 
+{
+  color: white;
+}
+
